--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -30,20 +30,27 @@
         </div>
         <div class="tab_content" id="tab2_content">
           <div class="tab_content_description">
-            <div class="modal-inner-content">
-              <div class="title">メンバー</div>
               <div class="contents">
                 <% @members.each do |member| %>
                   <div id="user-data" user-data-id="<%= member.id %>"></div>
-                  <%= member.name %>
-                  <% status = member.status ? "online":nil %>
-                  <span class="user-status <%= status %> user-<%= member.id %>-status">
-                    ・
-                  </span>
-                <% end %>
+                  <div class="room-user-list">
+                    <img src="<%= member.image %>" class="icon">
+                    <div class="info">
+                      <div class="info-top">
+                        <div class="name">
+                          <%= member.name %>
+                          <% status = member.status ? "online":nil %>
+                        </div>
+                        <span class="user-status <%= status %> user-<%= member.id %>-status">
+                          ●
+                        </span>
+                      </div>
+                      <div class="role">管理者</div>
+                    </div>
+                  </div>
+                  <% end %>
               </div>
             </div>
-          </div>
         </div>
         <div class="tab_content" id="tab3_content">
           <div class="tab_content_description">
