--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -95,15 +95,25 @@
 
 .room_header_left {
   display: flex;
-  align-items: flex-start;
-}
-
-.room_header_right {
-  font-size: 20px;
   color: #2a2a2a;
   border-radius: 50%;
-  margin-left: 30px;
-  padding-top: 8px;
+  cursor: pointer;
+  cursor: hand;
+  .room_title{
+    margin-right: 8px;
+    display: flex;
+    padding: 3px 10px;
+    &:hover{
+      background-color: #F4F4F4;
+      transition: 0.6s;
+    }
+    .room_datail_button{
+      margin-left: 8px;
+      i {
+        font-size: 20px;
+      }
+    }
+  }
 }
 
 .modal-menu-container {
@@ -157,10 +167,6 @@
   }
 }
 
-.room_header_right:hover {
-  background-color: #f0f0f0;
-  transition: 0.5s;
-}
 .room_title {
   font-size: 25px;
   color: #2a2a2a;
@@ -483,6 +489,22 @@
     transition: 0.6s;
   }
 }
+
+.modal-room-back{
+  padding: 10px 5px;
+  text-align: center;
+  .room-back-contents{
+    font-size: 14;
+    a {
+      color: rgb(229, 25, 25);;
+    }
+  }
+  &:hover{
+    background-color: #ffe8e8;
+    transition: 0.6s;
+  }
+}
+
 
 .close-btn {
   position: absolute;
