--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -7,7 +7,7 @@
         <div class="modal-body">
             <div class="create-from">
             <%= form_with url: create_room_path, model: @new_room, data: { turbo_frame: "_top" } do |f| %>
-                <div id="errors"></div>
+                <div id="form-errors"></div>
                 <%= f.label :category %>
                 <%= f.text_field :category %>
                 人気カテゴリー  
