--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -68,6 +68,8 @@ body{
       display: inline-block;
       padding: 7px 10px;
       width:88%;
+      cursor: pointer;
+      cursor: hand;
     }
     .menu-one:hover{
       background-color: #F4F4F4;
@@ -110,65 +112,85 @@ body{
 }
 
 .modal {
-  opacity: 0;
   visibility: hidden;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  overflow: auto;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  opacity: 0;
   background: rgba(0,0,0,0.78);
   transition: .3s;
 }
 
 .modal-content {
-  position: relative;
+  position: absolute;
   background-color: rgb(105, 209, 105);
-  margin: 10% auto;
   border: 10px solid rgb(105, 209, 105);
   border-radius: 10px;
-  width: 39%;
   font-size: 1.25rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-.modal-header {
-  padding: 12px;
-  background-color: rgb(105, 209, 105);
-  border-radius:10px 10px 0px 0px;
-  color: white;
-  .close {
-    float: right;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 39%;
+  height: 80%;
+  margin: auto 10px;
+  .modal-header {
+    padding: 12px;
+    background-color: rgb(105, 209, 105);
+    border-radius:10px 10px 0px 0px;
+    color: white;
+    .close {
+      float: right;
+    }
   }
+  .modal-body {
+    background-color: #ffffff;
+    border-radius:0px 0px 10px 10px;
+    padding: 12px;
+    overflow-y: scroll;
+    height: 370px;
+    .create-from{
+      flex-flow: column;
+      border-bottom:2px solid #7a7a7a;
+      input[type="text"]{
+        width: 99%;
+        height: 30px;
+        margin-bottom: 4px;
+      }
+      input[type="file"] {
+        margin-bottom: 6px;
+      }
+      textarea{
+        width: 99%;
+        height: 30px;
+        margin-bottom: 4px;
+      }
+      input[type="submit"]{
+      }
+      .category{
+          display: flex;
+      }
+    }
+  }
+  .modal-body::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+  .modal-body::-webkit-scrollbar-track {
+    background: linear-gradient(white ,white);
+  }
+  
+  .modal-body::-webkit-scrollbar-thumb {
+    background: rgb(213, 213, 213);
+    border-radius:5px;
+}
 }
 
-.modal-body {
-  background-color: #ffffff;
-  border-radius:0px 0px 10px 10px;
-  padding: 12px;
-  .create-from{
-    flex-flow: column;
-    border-bottom:2px solid #7a7a7a;
-    input[type="text"]{
-      width: 99%;
-      height: 30px;
-      margin-bottom: 4px;
-    }
-    input[type="file"] {
-      margin-bottom: 6px;
-    }
-    textarea{
-      width: 99%;
-      height: 30px;
-      margin-bottom: 4px;
-    }
-    input[type="submit"]{
-    }
-    .category{
-        display: flex;
-    }
-  }
-}
 
 @keyframes show {
   0% {
