--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -14,6 +14,7 @@
           </div>
           <%= room.name %>
           <%= date_format(room.created_at)%>
+          <%= link_to room.category, category_path(room.category) %>
       </div>
     <% end %>
   <% end %>
