--- a/chatapp/app/views/category/index.html.erb
+++ b/chatapp/app/views/category/index.html.erb
@@ -1,1 +1,19 @@
-<%= @category %>
+<div class="rooms">
+  <% @rooms.each do |room| %>
+    <% category = @rooms_hash[room.id] %>
+    <%= link_to room_page_path(room.id) do %>
+        <div class="room"> 
+            <div class="room-image">
+              <% if category["image"] != nil %>
+                <img src = "<%= category["image"] %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <%= category["name"] %>
+            <%= date_format(category["created_at"])%>
+            <%= category["category"] %>
+        </div>
+    <% end %>
+  <% end %>
+</div>
