--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -3,8 +3,8 @@
 </div>
 <div class="rooms">
   <% @room_info.each do |room| %>
+    <%= link_to room.category, category_path(CGI.escape(room.category)) %>
     <%= link_to room_page_path(room.id) do %>
-    <%= link_to room.category, category_path(room.category) %>
       <div class="room"> 
           <div class="room-image">
           <% if room.image.length > 0 %>
