--- a/chatapp/app/views/category/index.html.erb
+++ b/chatapp/app/views/category/index.html.erb
@@ -2,7 +2,7 @@
   <% @rooms.each do |room| %>
         <div class="room"> 
             <div class="room-image">
-              <% if room.image != nil %>
+              <% if room.image.length > 0 %>
                 <img src = "<%= room.image %>" class="room-image">
               <% else %>
                 <img src = "/room_image/default.png" class="room-image">
@@ -18,7 +18,7 @@
       <%= link_to room_page_path(room.id) do %>
           <div class="room"> 
               <div class="room-image">
-                <% if room.image != nil %>
+                <% if room.image.length > 0 %>
                   <img src = "<%= room.image %>" class="room-image">
                 <% else %>
                   <img src = "/room_image/default.png" class="room-image">
