--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -7,7 +7,7 @@
     <%= link_to room_page_path(room.id) do %>
       <div class="room"> 
           <div class="room-image">
-          <% if room.image.length > 0 %>
+          <% if room.image.length > 0 || room.image != nil %>
               <img src = "<%= room.image %>" class="room-image">
           <% else %>
               <img src = "/room_image/default.png" class="room-image">
