--- a/chatapp/app/views/category/index.html.erb
+++ b/chatapp/app/views/category/index.html.erb
@@ -5,7 +5,7 @@
   <% @rooms.each do |room| %>
         <div class="room"> 
             <div class="room-image">
-              <% if room.image.length > 0 %>
+              <% if room.image.length > 0 || room.image != nil %>
                 <img src = "<%= room.image %>" class="room-image">
               <% else %>
                 <img src = "/room_image/default.png" class="room-image">
@@ -17,26 +17,26 @@
             <%= room.category %>
         </div>
   <% end %>
-  <% if @rooms_joined.length > 0 %>
+  <% if @rooms_joined.length > 0 || @room_joined != nil %>
     <div class="content-column">
     <div class="title">参加中のルーム</div>
     </div>
   <% end %>
   <% @rooms_joined.each do |room| %>
-      <%= link_to room_page_path(room.id) do %>
-          <div class="room"> 
-              <div class="room-image">
-                <% if room.image.length > 0 || room.image != nil %>
-                  <img src = "<%= room.image %>" class="room-image">
-                <% else %>
-                  <img src = "/room_image/default.png" class="room-image">
-                <% end %>
-              </div>
-              <%= room.name %>
-              <%= date_format(room.created_at)%>
-              <%= room.category %>
-          </div>
-      <% end %>
+    <%= link_to room_page_path(room.id) do %>
+      <div class="room"> 
+        <div class="room-image">
+          <% if room.image.length > 0 || room.image != nil %>
+            <img src = "<%= room.image %>" class="room-image">
+          <% else %>
+            <img src = "/room_image/default.png" class="room-image">
+          <% end %>
+        </div>
+        <%= room.name %>
+        <%= date_format(room.created_at) %>
+        <%= room.category %>
+      </div>
+    <% end %>
   <% end %>
 </div>
 <%= link_to "戻る", request.referer %>
