--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -451,7 +451,7 @@
         padding: 10px;
         clear: both;
         overflow-y: scroll;
-        height: 320px;
+        height: 55vh;
       }
       .tab_content::-webkit-scrollbar {
           width: 6px;
