--- a/chatapp/app/views/category/index.html.erb
+++ b/chatapp/app/views/category/index.html.erb
@@ -1,6 +1,6 @@
 <div class="rooms">
   <div class="content-column">
-    <div class="title">カテゴリ別ルーム一覧（<%= @category_name %>）</div>
+    <div class="title">カテゴリ別ルーム一覧（<%= @category %>）</div>
   </div>
   <% @rooms.each do |room| %>
     <div class="room"> 
