--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -148,6 +148,7 @@ body{
     }
   }
   .modal-body {
+    display: none;
     background-color: #ffffff;
     border-radius:0px 0px 10px 10px;
     padding: 12px;
