--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -56,9 +56,23 @@
 
 .rooms {
   margin-left: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   .room {
-    display: flex;
-    margin-bottom: 15px;
+    width: 23%;
+    margin: 0px 1% 30px 0px;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+    background-color: #ffffff;
+    
+    .room-bg-image img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+    }
+    .room-titles {
+      padding: 10px;
+    }
     .room-image {
       widows: 50px;
       height: 50px;
