--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -162,7 +162,8 @@ body{
         position       : relative;            /* 親要素が基点       */
         //margin         : auto;                /* 中央寄せ           */
         width          : 60px;               /* ボタンの横幅       */
-        background     : #fff;                /* デフォルト背景色   */
+        //background     : #fff;                /* デフォルト背景色   */
+        overflow: hidden;
       }
 
       /* === チェックボックス ==================================== */
@@ -175,13 +176,16 @@ body{
         display        : block;               /* ボックス要素に変更 */
         box-sizing     : border-box;          /* 枠線を含んだサイズ */
         height         : 28px;                /* ボタンの高さ       */
-        border         : 2px solid #999999;   /* 未選択タブのの枠線 */
+        //border         : 2px solid #e9e9eb;   /* 未選択タブのの枠線 */
+        background-color: #e9e9eb;
         border-radius  : 14px;                /* 角丸               */
       }
 
       /* === チェックボックスのラベル（ONのとき） ================ */
       .switchArea input[type="checkbox"]:checked +label {
         border-color   : #78bd78;             /* 選択タブの枠線     */
+        background-color: #78bd78;
+        border-radius: 14px;
       }
 
       /* === 丸部分のSTYLE（標準） =============================== */
@@ -189,17 +193,21 @@ body{
         position       : absolute;            /* 親要素からの相対位置*/
         width          : 20px;                /* 丸の横幅           */
         height         : 20px;                /* 丸の高さ           */
-        background     : #999999;             /* カーソルタブの背景 */
+        background     : #fff;             /* カーソルタブの背景 */
         top            : 4px;                 /* 親要素からの位置   */
         left           : 4px;                 /* 親要素からの位置   */
         border-radius  : 10px;                /* 角丸               */
         transition     : .2s;                 /* 滑らか変化         */
+        box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.5);
       }
 
       /* === 丸部分のSTYLE（ONのとき） =========================== */
       .switchArea input[type="checkbox"]:checked ~ #swImg {
         transform      : translateX(32px);    /* 丸も右へ移動       */
-        background     : #78bd78;             /* カーソルタブの背景 */
+        background     : #fff;             /* カーソルタブの背景 */
+        border-color: #e9e9eb;
+        border-radius: 10px;
+        box-shadow: 0 9px 28px -6px rgba(0, 0, 0, 0.3);
       }
       input[type="text"]{
         width: 99%;
