add check roomtype for create room form

--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -17,6 +17,8 @@
                     <div class="category-count">(<%= category[1] %>)</div>
                 <% end %>
                 </div>
+                <%= f.label "メンバーを制限する" %>
+                <%= f.check_box :private, checked: false %>
                 <%= f.label :name %>
                 <%= f.text_field :name %>
                 <%= f.label :image %><br>
