--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -105,6 +105,10 @@
     display:none;
   }  
 }
+.room_view{
+  display: none;
+  visibility: hidden;
+}
 
 .room-header-list {
   position: fixed;
