--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -80,9 +80,13 @@
               nextSelector: 'span.next:last a',
               // 読み込み中の表示はどうする？
               loadingHtml: $(".cv-spinner"),
+
+              //  loadingHtmlが描画された後に実行する JavaScript 関数。
               // loadingFunction: function(){
               //   $('.cv-spinner').addClass('hide')
               // },
+
+              //  必要に応じて、一連のコンテンツが読み込まれた後に呼び出されるコールバック関数を定義
               // callback: function(){
               //   console.log("コールバック")
               //   $(".cv-spinner").addClass("hide")
