--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,30 +1,74 @@
 <div class="content-column">
   <div class="title">最新ルーム</div>
 </div>
-
 <div class="rooms">
   <% @room_latest.each do |room| %>
-        <div class="room"> 
-            <div class="room-bg-image"><img src="background.png"></div>
-            <div class="room-titles">
-              <div class="room-image">
+        <div class="room">
+            <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
-                  <img src = "<%= room.image %>" class="room-image">
+                  <img src = "<%= room.image %>">
                 <% else %>
-                  <img src = "/room_image/default.png" class="room-image">
+                  <img src = "/room_image/default.png">
                 <% end %>
+            </div>
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
               </div>
-              <%= link_to room.category, category_path(CGI.escape(room.category)) %>
-              <%= room.name %>
-              <%= date_format(room.created_at)%>
-              <%= link_to "参加", room_join_path(room.id), "data-turbo": false %>
+              <div class="title"><%= room.name %></div>
+            </div>
+            <div class="join-btn-area">
+              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
             </div>
         </div>
   <% end %>
 </div>
 
-
-
+<div class="content-column">
+  <div class="title">ルーム一覧</div>
+</div>
+<div class="rooms">
+  <% @room_all.each do |room| %>
+        <div class="room"> 
+            <div class="room-bg-image">
+                <% if room.image.length > 0 || room.image != nil %>
+                  <img src = "<%= room.image %>">
+                <% else %>
+                  <img src = "/room_image/default.png">
+                <% end %>
+            </div>
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+              </div>
+              <div class="title"><%= room.name %></div>
+            </div>
+            <div class="join-btn-area">
+              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+            </div>
+        </div>
+  <% end %>
+</div>
 <script type="text/javascript">
 document.addEventListener("turbo:load", () => {
   $(function() {
