--- a/chatapp/app/views/room/joined.html.erb
+++ b/chatapp/app/views/room/joined.html.erb
@@ -1,26 +1,30 @@
 <div class="content-column">
   <% if @room_info.length > 0 %>
-    <div class="title">参加中のルーム</div>
+    <div class="title2">参加中のルーム</div>
   <% else %>
-    <div class="title">参加中のルームはありません</div>
+    <div class="title2">参加中のルームはありません</div>
   <% end %>
 </div>
-<div class="rooms">
+<div class="joined-rooms">
   <% @room_info.each do |room| %>
-    <%= link_to room.category, category_path(CGI.escape(room.category)) %>
-    <%= link_to room_page_path(room.id) do %>
-      <div class="room"> 
-          <div class="room-image">
-          <% if room.image.length > 0 || room.image != nil %>
-              <img src = "<%= room.image %>" class="room-image">
-          <% else %>
-              <img src = "/room_image/default.png" class="room-image">
-          <% end %>
-          </div>
-          <%= room.name %>
-          <%= date_format(room.created_at)%>
-      </div>
-    <% end %>
+        <div class="joined-room">
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="title"><%= room.name %></div>
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time">最終更新 <%= date_format(room.updated_at)%></div>
+              </div>
+            </div>
+        </div>
   <% end %>
 </div>
 
