--- a/chatapp/app/views/room/search_result.html.erb
+++ b/chatapp/app/views/room/search_result.html.erb
@@ -1,8 +1,24 @@
-「ルーム名: <%= @search.name_cont %>」の検索結果は<%= @results.count %>件です<br>
+<div class="search-area">
+  <%= search_form_for @search, url: room_search_path do |f| %>
+    <%= f.search_field :name_cont, placeholder: "キーワードを入力してルームを検索", required: true %>
+    <% f.submit '検索' %>
+  <% end %>
+</div>
+<div class="search-count">
+  「<%= @search.name_cont %>」の検索結果は<%= @results.count %>件です<br>
+</div>
+
 <div class="rooms">
   <% @results.each do |room| %>
     <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) # not joined rooms %>
-        <div class="room"> 
+        <div class="room">
+            <div class="room-bg-image">
+                <% if room.image.length > 0 || room.image != nil %>
+                  <img src = "<%= room.image %>">
+                <% else %>
+                  <img src = "/room_image/default.png">
+                <% end %>
+            </div>
             <div class="room-image">
               <% if room.image.length > 0 || room.image != nil %>
                 <img src = "<%= room.image %>" class="room-image">
@@ -10,26 +26,46 @@
                 <img src = "/room_image/default.png" class="room-image">
               <% end %>
             </div>
-            <%= room.name %>
-            <%= date_format(room.created_at)%>
-            <%= link_to "参加", room_join_path(room.id) %>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+              </div>
+              <div class="title"><%= room.name %></div>
+            </div>
+            <div class="join-btn-area">
+              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+            </div>
         </div>
 
     <% else #joined rooms %>
-        <%= link_to room_page_path(room.id) do %>
-            <div class="room"> 
-                <div class="room-image">
+        <div class="room">
+            <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
-                    <img src = "<%= room.image %>" class="room-image">
+                  <img src = "<%= room.image %>">
                 <% else %>
-                    <img src = "/room_image/default.png" class="room-image">
+                  <img src = "/room_image/default.png">
                 <% end %>
-                </div>
-                <%= room.name %>
-                <%= date_format(room.created_at)%>
             </div>
-        <% end %>
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+              </div>
+              <div class="title"><%= room.name %></div>
+            </div>
+        </div>
     <% end %>
   <% end %>
 </div>
-<%= link_to "戻る", "/search/rooms" %>
