--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -44,7 +44,7 @@
                             ●
                           </span>
                         </div>
-                        <% if @room.admin == member.id %>
+                        <% if @room_data.admin == member.id %>
                           <div class="role">管理者</div>
                         <% end %>
                       </div>
